# swagger.yaml
@@ -1,9 +1,8 @@
 swagger: '2.0'
 info:
   title: ACME Company API
-  description: ACME Company API to manage stores, orders, and payments. You can find out more about this API at the [Github Project Repo](https://github.com/tonykingnz/RestAPIACMECompany)
-  
-  version: '3.3'
+  description: ACME Company API to manage stores, orders, and payments
+  version: '2.5'
 consumes:
   - application/json
 produces:
@@ -17,16 +16,24 @@ paths:
         - in: query
           name: storeAddress
           type: string
+        - default: 100
+          format: int32
+          in: query
+          name: limit
+          type: integer
       responses:
         '200':
           description: Return stores
           schema:
-            type: array
-            items:
-                $ref: '#/definitions/ResumeStore'
+            properties:
+              stores:
+                items:
+                  $ref: '#/definitions/ResumeStore'
+                type: array
+            type: object
       summary: List Stores
       tags:
-        - 1. Store - List and Create
+        - 1. Store API - List and Create
     post:
       operationId: app.create
       parameters:
@@ -38,13 +45,11 @@ paths:
       responses:
         '201':
           description: Store created
-          schema:
-            $ref: '#/definitions/Store'
         '400':
           description: Store already exist
       summary: Create a Store
       tags:
-        - 1. Store - List and Create
+        - 1. Store API - List and Create
       x-codegen-request-body-name: store
   '/stores/{storeId}':
     get:
@@ -64,7 +69,7 @@ paths:
           description: Store does not exist
       summary: Detail of a Store
       tags:
-        - '2. Store - Detail, Update and Remove'
+        - '2. Store API - Detail, Update and Remove'
     put:
       operationId: app.update
       parameters:
@@ -81,13 +86,11 @@ paths:
       responses:
         '200':
           description: Store updated
-          schema:
-            $ref: '#/definitions/Store'
         '404':
           description: Store does not exist
       summary: Update a Store
       tags:
-        - '2. Store - Detail, Update and Remove'
+        - '2. Store API - Detail, Update and Remove'
       x-codegen-request-body-name: store
     delete:
       operationId: app.remove
@@ -104,206 +107,61 @@ paths:
           description: Store does not exist
       summary: Remove a Store
       tags:
-        - '2. Store - Detail, Update and Remove'
+        - '2. Store API - Detail, Update and Remove'
   /orders :
     get:
-      operationId: app.listOrder
+      operationId: app.order
       parameters:
         - format: int32
           in: query
-          name: status
-          type: string
+          name: orderId
+          required: true
+          type: integer
       responses:
         '200':
-          description: List with orders, can be filtred by status
+          description: Retrieve order by ID
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/ResumeOrder'
+            $ref: '#/definitions/Order'
         '404':
           description: Order does not exist
-      summary: List of Orders
+      summary: Detail of an Order
       tags:
-        - '3. Order - Create, List, Detail and Update'
+        - '3. Order API - Detail, Update and Remove'
     post:
       operationId: app.createOrder
       parameters:
         - in: body
           name: order
-          required: true
+          required: false
           schema:
             $ref: '#/definitions/Order'
       responses:
         '200':
-          description: Order created
-          schema:
-            $ref: '#/definitions/Order'
+          description: Order updated
         '404':
           description: Order already exist
       summary: Create an Order
       tags:
-        - '3. Order - Create, List, Detail and Update'
+        - '3. Order API - Detail, Update and Remove'
       x-codegen-request-body-name: store
-  /orders/{orderId} :
-    get:
-        operationId: app.detailOrder
-        parameters:
-          - format: int32
-            in: path
-            name: orderId
-            required: true
-            type: integer
-        responses:
-          '200':
-            description: Retrieve order by ID
-            schema:
-              $ref: '#/definitions/Order'
-          '404':
-            description: Order does not exist
-        summary: Detail of an Order
-        tags:
-          - '3. Order - Create, List, Detail and Update'
-    put:
-      operationId: app.updateOrder
+    delete:
+      operationId: app.refund
       parameters:
         - format: int32
-          in: path
+          in: query
           name: orderId
           required: true
           type: integer
-        - in: body
-          name: order
-          required: true
-          schema:
-            $ref: '#/definitions/OrderAddress'
       responses:
         '200':
-          description: Order updated
-          schema:
-              $ref: '#/definitions/Order'
+          description: Refunded with sucess
         '404':
-          description: Order already exist
-      summary: Update an Order
+          description: 'Refund was not able to be performed, check if ID exist or if the refund period of 10 days passed'
+      summary: Refund an order
       tags:
-        - '3. Order - Create, List, Detail and Update'
-      x-codegen-request-body-name: order
-      
-  /orders/{orderId}/refund :
-    put:
-        operationId: app.refund
-        parameters:
-          - format: int32
-            in: path
-            name: orderId
-            required: true
-            type: integer
-        responses:
-          '200':
-            description: Order refunded
-            schema:
-              $ref: '#/definitions/Order'
-          '404':
-            description: Refund limit days passed or another problem occured
-        summary: Refund Order
-        tags:
-          - '4. Order - Refund Order or Order Item'
-        x-codegen-request-body-name: order
-  
-  /orders/{orderId}/refund/item :
-    put:
-        operationId: app.refundItem
-        parameters:
-          - format: int32
-            in: path
-            name: orderId
-            required: true
-            type: integer
-          - in: body
-            name: items
-            required: true
-            schema:
-              $ref: '#/definitions/RefundItem'
-        responses:
-          '200':
-            description: Order item refunded
-            schema:
-              $ref: '#/definitions/Order'
-          '404':
-            description: Refund limit days passed or another problem occured
-        summary: Refund Order Item
-        tags:
-          - '4. Order - Refund Order or Order Item'
-        x-codegen-request-body-name: order
-      
-  /orders/{orderId}/payments :
-    get:
-        operationId: app.paymentInformation
-        parameters:
-          - format: int32
-            in: path
-            name: orderId
-            required: true
-            type: integer
-        responses:
-          '200':
-            description: Payment for the order that this is inside.
-            schema:
-              $ref: '#/definitions/Payment'
-          '404':
-            description: Payment not yet created
-        summary: Detail of a Payment
-        tags:
-          - '5. Payment - Create, Detail and Update'
-    post:
-      operationId: app.createPayment
-      parameters:
-        - format: int32
-          in: path
-          name: orderId
-          required: true
-          type: integer
-        - in: body
-          name: payment
-          required: true
-          schema:
-            $ref: '#/definitions/Payment'
-      responses:
-        '200':
-          description: Payment created
-        '404':
-          description: Payment already exist
-        '405':
-          description: Some paramter is out of format. Check credit card numbers and everything else.
-      summary: Create a Payment
-      tags:
-        - '5. Payment - Create, Detail and Update'
-      x-codegen-request-body-name: payment
-    put:
-      operationId: app.updatePayment
-      parameters:
-        - format: int32
-          in: path
-          name: orderId
-          required: true
-          type: integer
-        - in: body
-          name: payment
-          required: true
-          schema:
-            $ref: '#/definitions/Payment'
-      responses:
-        '200':
-          description: Payment update
-          schema:
-            $ref: '#/definitions/Payment'
-        '404':
-          description: Payment dont found
-        '405':
-          description: Some paramter is out of format. Check credit card numbers and everything else.
-      summary: Update a payment
-      tags:
-        - '5. Payment - Create, Detail and Update'
-      x-codegen-request-body-name: payment
+        - '3. Order API - Detail, Update and Remove'
+      x-codegen-request-body-name: store
+
 definitions:
   ResumeStore:
     properties:
@@ -359,8 +217,8 @@ definitions:
       confirmationDate:
         description: Confirmation date of the order
         example: '2017-11-17 13:49:51.230860' #maybe use the confirmation date as the date order was created
+#        format: date-time
         type: string
-        readOnly: true
       id:
         description: store identifier
         format: int32
@@ -368,98 +226,30 @@ definitions:
         readOnly: true
       status:
         description: OrderStatus
-        example: PENDING
+        example: paid
         maxLength: 100
         minLength: 1
         type: string
-        enum:
-          - PENDING
-          - EXPIRED
-          - SUBMITED
-          - CANCELED
-        readOnly: true
-      orderItems:
-        type: array
-        items:
-          type: object
-          properties:
-            quantity:
-              type: integer
-              example: 2
-            description:
-              type: string
-              example: 'iPhone 11 Pro Max 512GB Gold'
-            unitPrice:
-              type: number
-              format: float
-              example: 1449.01
-      paid:
-        type: boolean
-        example: False
-        description: 'Order is paid'
-        readOnly: true #should be readOnly?
-  ResumeOrder:
-    properties:
-      id:
-        description: order identifier
-        format: int32
-        type: integer
-        readOnly: true
-      status:
-        description: Order Status
-        example: PENDING
-        maxLength: 50
-        minLength: 1
-        type: string
-        readOnly: true
-  OrderAddress:
-    properties:
-      address:
-        description: Address of the order
-        example: '37.3327° N, 122.0053° W'
-        minLength: 1
-        type: string
-  RefundItem:
-    properties:
-      orderItems:
-        type: array
-        items:
-          type: object
-          properties:
-            quantity:
-              type: integer
-              example: 2
-            description:
-              type: string
-              example: 'iPhone 11 Pro Max 512GB Gold'
-  Payment:
-    properties:
-      paymentDate:
-        description: Payment date of the order
-        example: '2017-11-17 13:50:25.230860'
-        type: string
-        readOnly: true
-      creditCardNumber:
-        description: Number of the Credit Card
-        pattern: '^\d{4} \d{4} \d{4} \d{4}$'
-        example: '5176 0400 0002 5018'
-        type: string
-      orderId:
-        description: Order id for payment
-        type: integer
-      status:
-        description: Order Status
-        example: SUBMITED
-        maxLength: 50
-        minLength: 1
-        type: string
-        readOnly: true
-      paid:
-        type: boolean
-        example: True
-        description: 'Order is paid'
-        readOnly: true #should be readOnly?
-        
+    # required:
+    #   - address
+    type: object
+  # ResumeOrder:
+  #   properties:
+  #     id:
+  #       description: store identifier
+  #       format: int32
+  #       type: integer
+  #       readOnly: true
+  #     status:
+  #       description: OrderStatus
+  #       example: paid
+  #       maxLength: 100
+  #       minLength: 1
+  #       type: string
+  #   # required:
+  #   #   - name
+  #   type: object
+    
 x-components:
   parameters:
     storeId:
